# flask-controller

./: .eslintrc.js  .gitattributes  .gitignore  LICENSE  Pipfile  README.md  controller.py  controller.py.prof  pyproject.toml  readme.md  requirements.txt  runapp.sh  setupenv.sh
.github/workflows/: check.yml  ruff.yml  test.yml
_emulator/: bizhawk_gba_grabwebinput.lua  gba_grabwebinput.lua  gba_simplegetinput.lua  mgba_grabwebinput.lua
_emulator/bizhawk/: bizhawk_gba_grabwebinput.lua  temp.lua
_emulator/generic_keyboard/: generic_keyboard.py
_emulator/mgba/: mgba_grab_web_input.lua  mgba_grabwebinput.lua
_emulator/mgba/testscripts/: mgba_simplegetinput.lua
_emulator/win_vgamepad/: win_vgamepad.py
flaskcontroller/: __init__.py  config.py  controller.py  flaskcontroller_controller.py  flaskcontroller_logger.py  flaskcontroller_settings.py  logger.py
flaskcontroller/static/: flaskcontroller.js  gbacontroller.js
flaskcontroller/templates/: home.html.j2
static/: dealWithInput.js  dealwithinput.js  gbacontroller.js  tick.js  zy.css
templates/: home.html
tests/: conftest.py  test__meta.py  test__no_pollution.py  test_config.py  test_config_unit.py  test_controller.py  test_controller_unit.py  test_home.py  test_logger.py  test_logger_unit.py  test_socket.py
tests/configs/: invalid.toml  logging_invalid.toml  logging_invalid_log_level.toml  logging_path_invalid.toml.j2  logging_path_valid.toml.j2  testing_false_valid.toml  testing_run_socket.toml  testing_true_valid.toml
